test/files/neg/abstract-class-2.check
abstract-class-2.scala:11: error: object creation impossible. Missing implementation for:
  def f(x: P2.this.p.S1): Int // inherited from trait S2
(Note that P.this.p.S1 does not match P2.this.S1: their prefixes (i.e., enclosing instances) differ)
  object O2 extends S2 {
         ^
one error found
